--- a/package.json
+++ b/package.json
@@ -10,16 +10,15 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
-<<<<<<< HEAD
+
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
-=======
+    "react-icons": "^5.4.0",
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
->>>>>>> e0c073c51a113c9e0a7c253eb8c2cebe37b2ff96
+
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
